# sanskar-a-social-media

./: .gitignore  ReadMe.md  package-lock.json
CPP-Backend/: CMakeLists.txt  User1.cpp  chat_server.cpp  messages.txt  package-lock.json  package.json  server.cpp  server_utils.h  sqlite3.exp  sqlite3.lib  tempCodeRunnerFile.cpp  user2.cpp  users.txt
my-app/: index.html  package-lock.json  package.json
my-app/src/: App.css  App.jsx  index.css
my-app/src/component/: Chat.css  Chat.jsx  Home.css  Login.css  Login.jsx  Notification.css  Notification.jsx  Register.css  Register.jsx  home.jsx
